--- a/trunk/Specify/help/SpecifyHelp/Workbench/ExportingData.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ExportingData.html
@@ -8,9 +8,9 @@
 <body>
 <h2>Exporting Data</h2>
 <hr>
-<p>The WorkBench can export an entire Data Set or select records within a Data Set by choosing Action items from both  the Sidebar and the Workspace Item Bar. The following table describes each of these export functions: </p>
+<p>The WorkBench can export an entire Data Set or select records within a Data Set by choosing Action items from either  the Sidebar or the Workspace. The following table describes each of these export functions: </p>
 <p>&nbsp;</p>
-<table width="75%" border="0" cellspacing="1" cellpadding="6">
+<table width="75%" border="1" cellspacing="1" cellpadding="6">
   <tr>
     <td width="8%"><u><strong>Button</strong></u></td>
     <td width="28%"><u><strong>Item</strong></u></td>
@@ -22,22 +22,22 @@
 
     <td><a href="ExportData Set.html">Export Data Set</a></td>
     <td>Sidebar</td>
-    <td><p>Choose a closed Data Set  </p>
-      <p>Export the entire Data Set </p></td>
+    <td><p>Exports an entire Data Set </p>
+      <p>Only closed Data Sets can be exported by this method. </p></td>
   </tr>
   <tr>
     <td><div align="center"><img src="../images/ExportExcelTemplate16x16.png" width="16" height="16" ></div></td>
     <td><a href="ExportData Set.html">Export Excel Template</a></td>
     <td>Sidebar</td>
-    <td><p>Choose a closed Data Set </p>
-      <p>Export the entire Data Set </p></td>
+    <td><p>Exports an entire Data Set </p>
+      <p>Only closed Data Sets can be exported by this method. </p></td>
   </tr>
   <tr>
     <td><div align="center"><img src="../images/ExportDataSet16x16.png" width="16" height="16"></div></td>
     <td><a href="ExportData Set.html">Export Data Set</a></td>
     <td>Workspace</td>
-    <td><p>Active Data Set only </p>
-      <p>Export  select records or the entire Data Set </p></td>
+    <td><p>Exports  select records or the entire Data Set (by selecting all records) </p>
+      <p>Only active Data Sets can be exported by this method. </p></td>
   </tr>
 </table>
 <p>&nbsp;</p>
