--- a/trunk/Specify/help/SpecifyHelp/Workbench/ImportCSV.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ImportCSV.html
@@ -7,22 +7,21 @@
 <body>
 <h2>Importing Data from a CSV file </h2>
 <hr>
-<p>The WorkBench can easily import data from a CSV file into a new Data Set. </p>
+<p>The WorkBench can easily import data from a CSV (comma separated value) file into a new Data Set. </p>
 <p>To begin, click on the Import Data action on the Sidebar and choose the import file in the file dialog. </p>
 <p>The following information dialog will open: </p>
 <p align="center"><img src="../images/badcsvimport.png" alt="Bad Import"></p>
-<p align="center" class="imgcaption">Incorrect Delimiter Selections </p>
+<p align="center" class="imgcaption">Incorrect Import Options </p>
 <p>&nbsp;</p>
-<p>This dialog enables  the WorkBench to properly import the file by determining if the import file inlcudes column headings and setting the proper file delimiters. </p>
-<p>The Data Preview window reads and displays a sample of the column headings and data from the import file. If the file does not contain column headings the columns will be named by the numerical order (Column 1, Column 2, etc.). Check the 'First row contains column headings' box according to how the file displays in the Data Preview window. </p>
-<p>The Data Preview display is also used to discover the delimiter settings for the import file. The 'Bad Delimiter Selections' image above shows a dialog with incorrect information selected in the 'Data Import Options'. This is obvious in both the 'Data Preview' window, which shows sporadic data, as well as in the warning icon and message shown under the 'Data Preview' window. </p>
+<p>This dialog enables  the WorkBench to properly import the file by allowing the user to set data import options. </p>
+<p>The Data Preview window reads and displays a sample of the column headings and data from the import file. If the file does not contain column headings the columns will be labelled in  numerical order (Column 1, Column 2, etc.). </p>
+<p>Incorrect import options will be visible in the Data Preview window and will also have a warning icon and message displayed. </p>
 <p>To correct the information displayed,   choose different selections  in the 'Data Import Options' section of the dialog. When the 'Data Import Options' are correct the 'Data Preview' window will display the CSV file correctly and the warning icon will disappear. The corrected dialog is shown below: </p>
 <p align="center"><img src="../images/gooddelimiters.png" alt="Good Delimiters"></p>
-<p align="center" class="imgcaption">Correct Delimiter Selections </p>
+<p align="center" class="imgcaption">Correct Import Options </p>
 <p>&nbsp;</p>
 <p>The next step in the import process is to 'map' the  column headings from the import file to  Specify fields. </p>
-<p>A file with column headings will map differently  than a file without column headings. Both instances are described below.</p>
-<p>&nbsp; </p>
+<p>&nbsp;</p>
 <h3><u>File includes  Column Headings </u> </h3>
 <p>The Workbench includes an 'auto-mapping' feature which  first identifies  column headings and compares them to existing Data Sets. If the column headings in the import file match those in an existing Data Set the following dialog will open:</p>
 <p align="center"><img src="../images/newdataset.png" alt="New Data Set" ></p>
@@ -30,14 +29,14 @@
 <p>&nbsp;</p>
 <p>To copy the 'map' from an existing Data Set select the 'Use an existing Data Set mapping' button and choose the Data Set from the list provided. The Data Set Properties dialog will then open, to name and describe the new Data Set. </p>
 <p>To create a new map for the new Data Set select the 'Create new Data Set mapping' button and click 'OK'.</p>
-<p>The 'automapper' then compares the import column headings to the Specify fields and 'maps' the columns to matching fields. If most of the column headings  match  Specify fields the map will appear much like the following example:</p>
+<p>The 'auto-mapper' then compares the import column headings to the Specify fields and 'maps' the columns to matching fields. </p>
 <p align="center"><img src="../images/automappededitor.png" alt="automapped" ></p>
 <p align="center" class="imgcaption">Column Headings Automapped in the Data Set Mapping Editor </p>
 <p>&nbsp;</p>
-<p>The column headings from the import file appear under 'Data Set Columns' on the right side of the dialog and the 'Specify Fields' appear on the left. </p>
+<p>The column headings from the import file appear under 'Data Set Columns' on the right side of the dialog and are mapped to 'Specify Fields'  on the left. </p>
 <p>Column headings that map to Specify fields are identifed by a <img src="../images/linked.png" alt="Linked" > (linked) icon. </p>
-<p>Column headings that have not been automapped will display 'To Be Discarded' rather than mapping to a Specify field. Unmapped column headings will be deleted if they are not mapped to a Specify field before clicking 'OK'.</p>
-<p>The buttons in the dialog enable columns to be mapped, unmapped, added, deleted and reordered . The function of each button is described below:</p>
+<p>Column headings that have not been automapped will have 'To Be Discarded' displayed under 'Specify fields'. Unmapped column headings will be deleted if they are not mapped to a Specify field before clicking 'OK'.</p>
+<p>The buttons in the dialog enable columns to be mapped, unmapped, added, deleted and reordered . </p><br>
 <table width="75%" border="1" cellspacing="1" cellpadding="6">
   <tr>
     <td width="8%"><img src="../images/Map16x16.png" alt="map" width="16" height="16"></td>
@@ -63,14 +62,14 @@
 <p>&nbsp;</p>
 <p>To map an unmapped Data Set column to a Specify field:</p>
 <ol>
-  <li>Click on the column to select it</li>
-  <li>Click on the Data Type to show the Specify fields in the 'Fields' window </li>
-  <li>Click on the Specify field to select it</li>
+  <li>Click on the column in the right hand window to select it</li>
+  <li>Click on the Data Type to display the associated fields in the 'Specify Fields' window </li>
+  <li>Click on the required Specify field to select it</li>
   <li>Click the <img src="../images/Map16x16.png" alt="map" width="16" height="16"> (map) button </li>
 </ol>
-<p>To  unmap a column to a field:</p>
+<p>To  unmap a column from a field:</p>
 <ol>
-  <li>Click on the column to select it </li>
+  <li>Click on the column in the right hand window to select it </li>
   <li>Click the <img src="../images/Unmap16x16.png" alt="unmap" width="16" height="16"> (unmap) button </li>
 </ol>
 <p>To add a column </p>
@@ -80,7 +79,7 @@
   <li>Click the <img src="../images/Map16x16.png" alt="map" width="16" height="16"> (map) button</li>
 </ol>
 <p>A <img src="../images/linked_right.png" alt="link" width="32" height="16"> (link) icon confirms that the column and field are the same heading. </p>
-<p><em><strong>Note:</strong></em> A field may only map once. Specify fields that are mapped display a green check next to their name in the Specify field list confirming that they are in use. </p>
+<p><em><strong>Note:</strong></em> A field may only map once. Specify fields that are mapped display a green check mark next to their name in the Specify field list confirming that they are in use. </p>
 <p>&nbsp;</p>
 <p>When all the Columns are mapped and ordered correctly click the 'OK' button. </p>
 <p>Complete the import process by   naming  and describing the new Data Set:</p>
@@ -88,13 +87,13 @@
 <p align="center" class="imgcaption">Data Set Properties </p>
 <p>&nbsp;</p>
 <h3><u>File does Not include Column Headings </u></h3>
-<p>Import files that do not contain column headings can not be 'automapped' to fields in Specify, but must be manually mapped. Columns are named according to their numerical order: </p>
+<p>Import files that do not contain column headings can not be 'auto-mapped' to fields in Specify. Columns are labelled according to their numerical order and  need to be manually mapped. </p>
 <p align="center"><img src="../images/nonamesmap.png" alt="no names mapped" ></p>
 <p align="center" class="imgcaption">Map of Import File with No Column Headings </p>
 <p align="left">&nbsp;</p>
 <p align="left"> Columns without headings display  'To Be Discarded' rather than mapping to Specify fields. Unmapped column headings will be deleted if they are not mapped to a Specify field before clicking 'OK'.</p>
 <p align="left">&nbsp;</p>
-<p>The buttons in the dialog enable columns to be mapped, unmapped, added, deleted and reordered . The function of each button is described below:</p>
+<p>The buttons in the dialog enable columns to be mapped, unmapped, added, deleted and reordered . The function of each button is described below:</p><br>
 <table width="75%" border="1" cellspacing="1" cellpadding="6">
   <tr>
     <td width="8%"><img src="../images/Map16x16.png" alt="map" width="16" height="16"></td>
@@ -120,24 +119,24 @@
 <p>&nbsp;</p>
 <p>To map an unmapped Data Set column to a Specify field:</p>
 <ol>
-  <li>Click on the column to select it</li>
-  <li>Click on the Data Type to show the Specify fields in the 'Specify Fields' window </li>
-  <li>Click on the Specify field to select it</li>
+  <li>Click on the column in the right hand window to select it</li>
+  <li>Click on the Data Type to display the associated fields in the 'Specify Fields' window </li>
+  <li>Click on the required Specify field to select it</li>
   <li>Click the <img src="../images/Map16x16.png" alt="map" width="16" height="16"> (map) button </li>
 </ol>
-<p>To  unmap a column to a field:</p>
+<p>To  unmap a column from a field:</p>
 <ol>
-  <li>Click on the column to select it </li>
+  <li>Click on the column in the right hand window to select it </li>
   <li>Click the <img src="../images/Unmap16x16.png" alt="unmap" width="16" height="16"> (unmap) button </li>
 </ol>
 <p>To add a column </p>
 <ol>
-  <li>Click on the Data Type to show the Specify fields in the 'Specify Fields' window </li>
+  <li>Click on the Data Type to show the Specify fields in the 'Fields' window </li>
   <li>Click on the Specify field</li>
   <li>Click the <img src="../images/Map16x16.png" alt="map" width="16" height="16"> (map) button</li>
 </ol>
 <p>A <img src="../images/linked_right.png" alt="link" width="32" height="16"> (link) icon confirms that the column and field are the same heading. </p>
-<p><em><strong>Note:</strong></em> A field may only map once. Specify fields that are mapped display a green check next to their name in the Specify field list confirming that they are in use. </p>
+<p><em><strong>Note:</strong></em> A field may only map once. Specify fields that are mapped display a green check mark next to their name in the Specify field list confirming that they are in use. </p>
 <p>&nbsp;</p>
 <p>When all the columns are mapped and ordered correctly click the 'OK' button. </p>
 <p>Complete the import process by   naming  and describing the new Data Set:</p>
@@ -147,7 +146,7 @@
 <p>To rename  columns headings see <a href="FormEditing.html">Form Editing</a>. </p>
 <p>&nbsp;</p>
 <h3><u>Bad Imports </u></h3>
-<p>XLS files that are corrupt or have not been saved correctly will not import correctly into the WorkBench. A bad file may appear in the Data Set Mapping Editor with partial or no column headings, or  display a warning at the bottom of the WorkBench window: </p>
+<p>CSV files that are corrupt or have not been saved correctly will not import correctly into the WorkBench. A bad file may appear in the Data Set Mapping Editor with partial or no column headings, or  display a warning at the bottom of the WorkBench window: </p>
 <p>&nbsp;</p>
 <p><img src="../images/wrongfilewarning.png" alt="Wrong File Warning" ></p>
 <h2></h2>
